--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "name": "person-application",
     "version": "1.0.0",
     "scripts": {
+        "start": "node server.js",
+        "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
         "client": "cd client && npm start",
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
